<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ProfileConstraintStyle"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profile_photo"
        android:contentDescription="@string/image_profile_contentDesc"
        style="@style/ProfileImageStyle"
        app:cornerRadius="@dimen/profile_image_cornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_detail"
        style="@style/CardProfileStyle"
        app:cardCornerRadius="@dimen/profile_card_cornerRadius"
        app:cardUseCompatPadding="true"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo" >

        <TextView
            android:id="@+id/nameOfUser"
            android:text="@string/name_of_user"
            style="@style/NameOfUser"/>

        <TextView
            android:id="@+id/userEmail"
            android:text="@string/user_email"
            style="@style/EmailUser"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/logout_button"
        android:text="@string/logout_text"
        style="@style/LogoutButtonStyle"
        app:cornerRadius="@dimen/logout_button_cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_detail"
        app:layout_constraintVertical_bias="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>