<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RegisterBasedStyle"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerLabel"
        android:text="@string/register_text"
        style="@style/RegisterLabelStyle"
        app:layout_constraintBottom_toTopOf="@+id/emailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"/>

    <ImageButton
        android:id="@+id/nav_to_login"
        android:contentDescription="@string/go_back"
        style="@style/GoBackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:srcCompat="@drawable/ic_arrow_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="@dimen/form_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/retype_password_marginHorizontal"
        android:layout_marginTop="@dimen/email_signUp_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layoutHeight"
            android:textSize="@dimen/input_textSize"
            android:hint="@string/email_hint"
            android:inputType="text"
            android:background="@drawable/container"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="@dimen/form_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/password_login_marginHorizontal"
        android:layout_marginTop="@dimen/password_register_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passET"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layoutHeight"
            android:textSize="@dimen/input_textSize"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:background="@drawable/container"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/retypePasswordLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="@dimen/form_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_register_marginTop"
        android:layout_marginHorizontal="@dimen/password_login_marginHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/retypePassET"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layoutHeight"
            android:textSize="@dimen/input_textSize"
            android:background="@drawable/container"
            android:hint="@string/password_retype_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginBottom="@dimen/button_marginBottom"
        android:backgroundTint="@color/darken_blue"
        android:layout_marginTop="@dimen/register_button_marginTop"
        android:text="@string/register_text"
        android:textSize="@dimen/button_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retypePasswordLayout"
        app:layout_constraintVertical_bias="0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>