<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LoginBasedStyle"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginLabel"
        android:text="@string/login_text"
        style="@style/LoginLabelStyle"
        app:layout_constraintBottom_toTopOf="@+id/emailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="@dimen/form_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/username_login_marginHorizontal"
        android:layout_marginTop="@dimen/username_login_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEt"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layoutHeight"
            android:textSize="@dimen/input_textSize"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/container"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="@dimen/form_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/password_login_marginHorizontal"
        android:layout_marginTop="@dimen/password_login_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passET"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layoutHeight"
            android:textSize="@dimen/input_textSize"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:background="@drawable/container" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_text"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginTop="@dimen/login_button_marginTop"
        android:backgroundTint="@color/darken_blue"
        android:textSize="@dimen/button_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <Button
        android:id="@+id/register_button"
        android:text="@string/register_text"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginTop="@dimen/register_button_marginTop"
        android:backgroundTint="@color/darken_blue"
        android:textSize="@dimen/button_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0" />
</androidx.constraintlayout.widget.ConstraintLayout>